fix: Choices dropdown not visible

--- a/source/scss/pages/_traslados.scss
+++ b/source/scss/pages/_traslados.scss
@@ -51,3 +51,16 @@ $max_adder_height: 2.82rem;
 .tabulator-cell {
   white-space: normal;
 }
+
+#activos-table {
+  overflow: visible;
+
+  .tabulator-cell:last-of-type {
+    overflow: visible;
+  }
+
+  .tabulator-tableholder {
+    overflow: visible;
+  }
+}
+
